Fix position of custom fields dropdown on mobile

--- a/src-ui/src/app/components/common/custom-fields-dropdown/custom-fields-dropdown.component.scss
+++ b/src-ui/src/app/components/common/custom-fields-dropdown/custom-fields-dropdown.component.scss
@@ -4,7 +4,7 @@
     // correct position on mobile
     @media (max-width: 575.98px) {
         &.show {
-            margin-left: -175px !important;
+            margin-left: -245px !important;
         }
     }
 }
